# ghast

./: .gitignore  CHANGELOG.md  LICENSE  README.md  default.nix  ghast.cabal  output.txt  sept-hackathon-proposal.md
app/: Main.hs
examples/: golden-types-fail.txt  multi-test-fail-local.txt  rubyfail.txt  test-fail.txt
src/: AppEnvironment.hs  Args.hs  Github.hs  LocalPrelude.hs  README.md  Repl.hs  Request.hs  Shared.hs  UriFragment.hs  Util.hs  json.json
src/Github/: JobLogs.hs  Jobs.hs  Runs.hs  notes.txt
src/Parsers/: DateTime.hs  Filepath.hs  GhcErrorHeader.hs  GhcErrors.hs  GithubLogs.hs  MigrationMismatch.hs  OtherLogline.hs  TestFailure.hs
test/: AuthSpec.hs  BasicAuthSpec.hs  README.md  UriFragmentSpec.hs
test/Parsers/: DateTimeSpec.hs  FilepathSpec.hs  GhcErrorsSpec.hs  TestFailureSpec.hs
