cabal-version:      2.4
name:               ghast
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Matt Olson
maintainer:         matto@mercury.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    hs-source-dirs: src
    exposed-modules:
        Repl
    build-depends:
        base ^>=4.14.1.0
      , aeson
      , bytestring
      , exceptions
      , http-conduit
    default-language: Haskell2010

executable ghast
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0
      , aeson
      , bytestring
      , case-insensitive
      , ghast
      , http-conduit
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite ghast-test
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Spec.hs
    build-depends:
        base
      , ghast
      , hspec
    build-tool-depends:
        hspec-discover:hspec-discover
    default-language: Haskell2010