cabal-version:      2.4
name:               ghast
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Matt Olson
maintainer:         matto@mercury.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    hs-source-dirs: src
    default-extensions:
        DeriveGeneric
      , DerivingStrategies
      , FlexibleInstances
      , GeneralizedNewtypeDeriving
      , NamedFieldPuns
      , OverloadedStrings
      , RecordWildCards
      , TypeApplications
    exposed-modules:
        AppEnvironment
      , Github
      , Github.Jobs
      , Github.Runs
      , Repl
      , Request
      , Shared
      , UriFragment
    build-depends:
        base ^>=4.14.1.0
      , aeson
      , aeson-casing
      , attoparsec
      , base64-bytestring
      , bytestring
      , case-insensitive
      , exceptions
      , http-conduit
      , mtl
      , optparse-applicative
      , shelly
      , text
      , uri-encode
    default-language: Haskell2010

executable ghast
    main-is:          Main.hs

    default-extensions:
        OverloadedStrings
      , DeriveGeneric
      , DerivingStrategies
      , TypeApplications

    -- Modules included in this executable, other than Main.
    other-modules:

    -- LANGUAGE extensions used by modules in this package.
    build-depends:
        base ^>=4.14.1.0
      , aeson
      , bytestring
      , case-insensitive
      , ghast
      , http-conduit
      , text
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite ghast-test
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Spec.hs
    default-extensions:
        FlexibleInstances
      , OverloadedStrings
      , TypeApplications

    build-depends:
        base
      , ghast
      , bytestring
      , case-insensitive
      , exceptions
      , hspec
      , http-conduit
      , http-types
      , text
    build-tool-depends:
        hspec-discover:hspec-discover
    default-language: Haskell2010